--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -41,28 +41,29 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>
-        <main class="contenedormainexperiencia">
+        <main class="experiencia">
             <section class="presentacionTres">
-                <p>He trabajado diez años en comercio,siendo encargado del manejo de  proveedores y clientes. Realice  proyectos relacionados a la  arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando para Desarrollador Full Stack.
+                <p>He trabajado diez años en comercio,siendo encargado del manejo de  proveedores y clientes. Realice  proyectos relacionados a la  arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando para Desarrollador Full Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi non omnis minus porro, nesciunt beatae velit fugiat necessitatibus inventore iure a vero! Asperiores inventore cupiditate blanditiis quae animi alias necessitatibus?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos in doloribus mollitia animi omnis maiores aliquam at harum eius natus ratione sequi facere placeat, laboriosam recusandae molestiae officia rem 
                 <Section class="info">
-                    <a href="">+ Descargar CV</a>
+                    <button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button>
+                    <a class="cv" href=""></a>
                 </Section>               
             </section>
             <section class="encuesta">
                 <p>¿Que servicio te interesa?</p>
                 <div class="trabajos">Portfolio
                     <input type="radio" name="lado" value="portfolio">
-                    <img  src="../images/1631547010-portfolio4.jpg" alt="">
+                    <img  src="../images/portfolio.jpg" alt="">
                 </div>
                 <div class="trabajos">Tienda
                     <input type="radio" name="lado" value="tienda">
-                    <img  src="../images/og_image_AR.jpg" alt="">
+                    <img  src="../images/tiendanube.jpg" alt="">
                 </div>
                 <div class="trabajos">Pagina Web
                     <input type="radio" name="lado" value="pagina">
-                    <img  src="../images/Calares2.png" alt="">
+                    <img  src="../images/website.jpg" alt="">
                 </div>
-                <section>
+                <section class="envio">
                     <form action=""><!--etiqueta en linea-->
                         <input type="text" placeholder="Mail" name="" id="" required><br><!--placeholder es el atributo--> <!--required obliga al usuario a completar el campo-->
                         <input type="submit" name="" id="">
