--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -14,25 +14,25 @@
         <header class="conteiner fluid sticky-top">
             <nav class="navbar navbar-expand-lg navbar-light navegacion">
                 <div class="container-fluid">
-                <img class="Logo" src="../images/logo-removebg-preview.png"  alt="Logo">  
-                <a class="navbar-brand" href="#">Hola, soy <span class="bold">Lucas Pedemonti <br> Desarrolador Web</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav d-flex justify-content-right ">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                    <a class="nav-link" href="../pages/sobreMi.html">Sobre mi</a>
-                    <a class="nav-link" href="../pages/experiencia.html">Experiencia</a>
-                    <a class="nav-link active" aria-current="page" href="#">Clientes</a>
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                </div>
-                <div class="idioma">
-                        <select class="lang" name="" id="">
-                            <option value="">Español</option>
-                            <option value="">Ingles</option>
-                        </select>
-                </div>
+                  <a class="logo" href="../index.html"><img src="../images/logo-removebg-preview.png"  alt="Logo"></a> 
+                  <a class="navbar-brand" href="#">Hola, soy <span class="bold">Lucas Pedemonti <br> Desarrolador Web</span></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                      <div class="navbar-nav d-flex justify-content-right ">
+                      <a class="nav-link" href="../index.html">Inicio</a>
+                      <a class="nav-link" href="../pages/sobreMi.html">Sobre mi</a>
+                      <a class="nav-link" href="../pages/experiencia.html">Experiencia</a>
+                      <a class="nav-link active" aria-current="page" href="#">Clientes</a>
+                      <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                  </div>
+                  <div class="idioma">
+                          <select class="lang" name="" id="">
+                              <option value="">Español</option>
+                              <option value="">Ingles</option>
+                          </select>
+                  </div>
                 </div>
             </nav>
         </header>
