--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="./sass_vivo/css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Lucas Pedemonti</title>
+    <meta name="description" content="estudiante de desarrollador full stack, primeros pasos">
+    <meta name="keywords" content="html,css,js">
 </head>
 <body>
     <div class="container__grid">
@@ -43,9 +46,9 @@
         </section>    
         <main class="contenedorMain">
             <section class="presentacionUno">
-                <p>Soy <span class="bold">desarrollador web</span>, <span class="bold">futuro desarrollador full stack</span>. Me gusta el diseño, crear paginas web funcionales y adaptables a las necesidades de cada cliente. </p>
+                <p class="animate__animated animate__fadeInLeftBig">Soy <span class="bold">desarrollador web</span>, <span class="bold">futuro desarrollador full stack</span>. Me gusta el diseño, crear paginas web funcionales y adaptables a las necesidades de cada cliente. </p>
             </section>
-            <section class="foto">
+            <section class="foto animate__animated animate__fadeInRightBig">
                 <div class="d-flex flex-column justify-content-center aling-items-center">
                     <img class="fotopersonal" src="./images/pexels-mati-mango-5952647-removebg.png" alt="lucasedemonti">
                     <a href="https://wa.me/+5491168682017"><button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button></a>
