--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="../sass_vivo/css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lucas Pedemonti</title>
+    <title>Lucas Pedemonti - Clientes</title>
+    <meta name="description" content="estudiante de desarrollador full stack, primeros pasos">
+    <meta name="keywords" content="html,css,js">
 </head>
 <body>
     <div class="container__grid">    
@@ -43,7 +46,7 @@
         </section>  
         <main >
           <div>
-            <h1 class="Clientes">Clientes</h1>
+            <h1 class="Clientes animate__animated animate__rubberBand ">Clientes</h1>
           </div>
           <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
