--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="../sass_vivo/css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lucas Pedemonti</title>
+    <title>Lucas Pedemonti- Contacto</title>
+    <meta name="description" content="estudiante de desarrollador full stack, primeros pasos">
+    <meta name="keywords" content="html,css,js">
 </head>
 <body>
     <div class="container__grid">
@@ -59,7 +61,7 @@
                 </div>
             </div>
             <section>
-                <h2>Donde me encuentro</h2>
+                <h2>Mi ubicacion</h2>
                 <Section>
                     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26306.873769448182!2d-58.51523639999999!3d-34.49377630000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb05662e4a08d%3A0x9811553c3a21048c!2sMart%C3%ADnez%2C%20Buenos%20Aires%20Province!5e0!3m2!1sen!2sar!4v1658282658582!5m2!1sen!2sar" width="350" height="300" style="border:2;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </Section>                               
