--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="../sass_vivo/css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lucas Pedemonti</title>
+    <title>Lucas Pedemonti - Experiencia</title>
+    <meta name="description" content="estudiante de desarrollador full stack, primeros pasos">
+    <meta name="keywords" content="html,css,js">
 </head>
 <body>
     <div  class="container__grid">
@@ -41,14 +44,14 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>
-        <main class="experiencia">
+        <main class="experiencia animate__animated animate__fadeInDownBig">
             <div>
                 <h1>Mi experiencia</h1>
             </div>
-            <section class="presentacionTres">
+            <section class="presentacionTres animate__animated animate__fadeInLeftBig">
                 <p>He trabajado mas de diez años en una tienda nautica, donde me desempeñe en diferentes areas. Fui encargado del manejo de proveedores, busqueda de nuevos productos para atraer nuevos clientes,y asi poder abarcar un mercado mas amplio. Tambien realice trabajos relacionados a la arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando la carrera Desarrollador Full Stack.
             </section>
-            <section class="encuesta">
+            <section class="encuesta animate__animated animate__fadeInRightBig">
                 <p>¿Que servicio te interesa?</p>
                 <div class="trabajos">Portfolio
                     <input type="radio" name="lado" value="portfolio">
