--- a/pages/sobreMi.html
+++ b/pages/sobreMi.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="../sass_vivo/css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lucas Pedemonti</title>
+    <title>Lucas Pedemonti - Sobre mi</title>
+    <meta name="description" content="estudiante de desarrollador full stack, primeros pasos">
+    <meta name="keywords" content="html,css,js">
 </head>
 <body>
     <div class="container__grid">
@@ -42,14 +45,14 @@
             </div>
         </section>
         <main class="contenedorMain">
-            <div>
+            <div class="animate__animated animate__fadeInDownBig">
                 <h1>Sobre mi</h1>
             </div>
-            <section class="presentacionDos">         
+            <section class="presentacionDos animate__animated animate__fadeInLeftBig">         
                 <p>Hola mi nombre es Lucas Pedemonti, naci en el año 1991 en Argentina - Provincia de Buenos Aires, en la localidad de San Isidro. Me encuentro trabajando en mi tesis para finalizar la carrera de Arquitectura Naval en la Universidad Nacional de Quilmes. Empece esta carrera en el año 2012, debibo a mi pasion por la nautica y el rio. Me destaco en el manejo de programas como Autocad, Rinhosceros, Maxsurf y SolidEdge.<br> A principios del año 2022 arranque a hacer cursos gratuitos de desarrollo web por internet en la plataforma Youtube. Luego empece a estudiar la carrera de Desarrollador Full Stack en Coder House. Estas dos carreras son muy diferentes, pero estan relacionadas mediante el diseño, realizacion de proyectos y brindar un buen servicio a nuestros clientes. Siempre me propongo nuevos desafios y vivir nuevas experiencias.</p>
                 <a href="http://www.unq.edu.ar/carreras/17-arquitectura-naval.php" target="_blank">+ info sobre Arquitectura</a>
             </section>               
-            <section >
+            <section class="animate__animated animate__fadeInRightBig">
                 <h3>Mis habilidades</h3>
                 <ul>
                     <li>Html <img src="../assets/icon/html5-line.svg" alt="html"></li>
