--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <section class="animate__animated animate__fadeInRightBig">
                 <div class="d-flex flex-column justify-content-center aling-items-center">
                     <img src="./images/Index.png" alt="lucasedemonti">
-                    <a href="https://www.linkedin.com/in/lucas-pedemonti-97373824a/"><button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button></a>
+                    <a href="https://www.linkedin.com/in/lucas-pedemonti-97373824a/" target="_blank"><button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button></a>
                 </div>
             </section>
             
